Use table name from config

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "VisualSignal\\FormPartials\\FormPartialsServiceProvider"
+                "VisualSignal\\AddressStore\\AddressStoreServiceProvider"
             ]
         }
     }
